hphp/test/slow/list_assignment/assignment-to-this.php.expectf
Fatal error: Invalid use of `$this`: it cannot be re-assigned in %s/test/slow/list_assignment/assignment-to-this.php on line 4